finished with first paper

--- a/paper/survey.bib
+++ b/paper/survey.bib
@@ -68,6 +68,19 @@ title = {{One weird trick for parallelizing convolutional neural networks}},
 url = {http://arxiv.org/abs/1404.5997},
 year = {2014}
 }
+@article{Berg2010,
+archivePrefix = {arXiv},
+arxivId = {arXiv:1409.0575v2},
+author = {Berg, Alex and Deng, J},
+eprint = {arXiv:1409.0575v2},
+file = {:home/mahesh/paper/survey/ref/1409.0575v2.pdf:pdf},
+journal = {Challenge},
+keywords = {benchmark,dataset,large-scale,object detection,object recognition},
+mendeley-groups = {survey\_icip2015},
+title = {{Imagenet large scale visual recognition challenge 2010}},
+url = {http://scholar.google.com/scholar?hl=en\&btnG=Search\&q=intitle:Large+Scale+Visual+Recognition+Challenge+2010\#2},
+year = {2010}
+}
 
 
 
