added two more paper from 2014

--- a/paper/main.tex
+++ b/paper/main.tex
@@ -12,7 +12,7 @@
 
 % Title.
 % ------
-\title{Machine learning techiniques for image classification - A Survey  }
+\title { Deep convolution networks for large scale image classification - A Survey  }
 %
 % Single address.
 % ---------------
