--- a/paper/survey.bib
+++ b/paper/survey.bib
@@ -236,6 +236,55 @@ keywords={Histograms;Image databases;Image recognition;Image representation;Imag
 doi={10.1109/CVPR.2006.68}, 
 ISSN={1063-6919},}
 
+@article{Zeiler2013,
+abstract = {Large Convolutional Network models have recently demonstrated impressive classification performance on the ImageNet benchmark. However there is no clear understanding of why they perform so well, or how they might be improved. In this paper we address both issues. We introduce a novel visualization technique that gives insight into the function of intermediate feature layers and the operation of the classifier. We also perform an ablation study to discover the performance contribution from different model layers. This enables us to find model architectures that outperform Krizhevsky $\backslash$etal on the ImageNet classification benchmark. We show our ImageNet model generalizes well to other datasets: when the softmax classifier is retrained, it convincingly beats the current state-of-the-art results on Caltech-101 and Caltech-256 datasets.},
+archivePrefix = {arXiv},
+arxivId = {1311.2901},
+author = {Zeiler, Matthew D and Fergus, Rob},
+eprint = {1311.2901},
+file = {:data/dev/object\_classifiers/ref/zeilerECCV2014.pdf:pdf},
+journal = {arXiv preprint arXiv:1311.2901},
+mendeley-groups = {survey\_icip2015/2013},
+pages = {818--833},
+title = {{Visualizing and Understanding Convolutional Networks}},
+url = {http://arxiv.org/abs/1311.2901},
+year = {2013}
+}
+
+@article{Goodfellow2013,
+abstract = {We consider the problem of designing models to leverage a recently introduced approximate model averaging technique called dropout. We define a simple new model called maxout (so named because its output is the max of a set of inputs, and because it is a natural companion to dropout) designed to both facilitate optimization by dropout and improve the accuracy of dropout's fast approximate model averaging technique. We empirically verify that the model successfully accomplishes both of these tasks. We use maxout and dropout to demonstrate state of the art classification performance on four benchmark datasets: MNIST, CIFAR-10, CIFAR-100, and SVHN.},
+archivePrefix = {arXiv},
+arxivId = {1302.4389},
+author = {Goodfellow, Ian J. and Warde-Farley, David and Mirza, Mehdi and Courville, Aaron and Bengio, Yoshua},
+eprint = {1302.4389},
+file = {:data/dev/object\_classifiers/ref/1302.4389v4.pdf:pdf},
+journal = {arXiv preprint},
+mendeley-groups = {survey\_icip2015/2013},
+pages = {1319--1327},
+title = {{Maxout Networks}},
+url = {http://arxiv.org/abs/1302.4389},
+year = {2013}
+}
+
+@article{Lin2013,
+abstract = {We propose a novel deep network structure called "Network In Network" (NIN) to enhance model discriminability for local patches within the receptive field. The conventional convolutional layer uses linear filters followed by a nonlinear activation function to scan the input. Instead, we build micro neural networks with more complex structures to abstract the data within the receptive field. We instantiate the micro neural network with a multilayer perceptron, which is a potent function approximator. The feature maps are obtained by sliding the micro networks over the input in a similar manner as CNN; they are then fed into the next layer. Deep NIN can be implemented by stacking mutiple of the above described structure. With enhanced local modeling via the micro network, we are able to utilize global average pooling over feature maps in the classification layer, which is easier to interpret and less prone to overfitting than traditional fully connected layers. We demonstrated the state-of-the-art classification performances with NIN on CIFAR-10 and CIFAR-100, and reasonable performances on SVHN and MNIST datasets.},
+archivePrefix = {arXiv},
+arxivId = {1312.4400},
+author = {Lin, Min and Chen, Qiang and Yan, Shuicheng},
+eprint = {1312.4400},
+file = {:data/dev/object\_classifiers/ref/3.pdf:pdf},
+journal = {arXiv preprint},
+mendeley-groups = {survey\_icip2015,survey\_icip2015/2013},
+pages = {10},
+title = {{Network In Network}},
+url = {http://arxiv.org/abs/1312.4400},
+year = {2013}
+}
+
+
+
+
+
 
 
 
