started with intro

--- a/paper/survey.bib
+++ b/paper/survey.bib
@@ -280,6 +280,53 @@ title = {{Network In Network}},
 url = {http://arxiv.org/abs/1312.4400},
 year = {2013}
 }
+@article{Hubel1962,
+author = {{Hubel DH}, Wiesel TN},
+file = {:data/dev/object\_classifiers/ref/jphysiol01247-0121.pdf:pdf},
+journal = {The Journal of Physiology},
+mendeley-groups = {survey\_icip2015/introduction},
+number = {1},
+pages = {106--154},
+title = {{Receptive fields, binocular interaction and functional architecture in the cat’s visual cortex}},
+volume = {160},
+year = {1962}
+}
+
+
+@article{Hubel1965a,
+abstract = {Electrophysiological recordings were obtained from cells in areas 17, 18 and 19 of the cat visual cortex. Light stimuli were presented to the intact eyes. Cells were characterized as complex and hypercomplex, depending on whether they responded best to single lines or edges extending over their whole receptive field, or whether the feature proved to be effective in activating the cell when in only a portion of the field. Hypercomplex cells predominated in area 19. Many interesting observations about cell responses are reported in this paper, including findings about the columnar arrangement of cells, binocular driving of cells, and size and location of their receptive fields. Histological and physiological studies agree on the delineation of the borders between areas 17 and 18, and areas 18 and 19. Silver-degeneration experiments show that cells in area 17 project to areas 18 and 19 bilaterally},
+author = {Hubel, D H and Wiesel, T N},
+file = {:data/dev/object\_classifiers/ref/jn.physiology.org\_content\_jn\_28\_2\_229.full.pdf:pdf},
+isbn = {0022-3077 (Print)},
+issn = {0022-3077},
+journal = {Journal of neurophysiology},
+keywords = {AXONS,BRAIN ELECTROPHYSIOLOGY,BRAIN MAPPING,CATS,EXPERIMENTAL LAB STUDY,GENICULATE BODIES,MICROSCOPY,OCCIPITAL LOBE,RECEPTORS, NEURAL,RETINA,STAINS AND STAINING,VISION,VISUAL FIELDS},
+mendeley-groups = {survey\_icip2015/introduction},
+pages = {229--289},
+pmid = {14283058},
+title = {{Receptive Fields and Functional Architecture in Two Nonstriate Visual Areas (18 and 19) of the Cat.}},
+volume = {28},
+year = {1965}
+}
+
+
+@article{Stark1980,
+abstract = {A neural network model for a mechanism of visual pattern recognition is proposed in this paper. The network is self-organized by "learning without a teacher", and acquires an ability to recognize stimulus patterns based on the geometrical similarity (Gestalt) of their shapes without affected by their positions. This network is given a nickname "neocognitron". After completion of self-organization, the network has a structure similar to the hierarchy model of the visual nervous system proposed by Hubel and Wiesel. The network consists of an input layer (photoreceptor array) followed by a cascade connection of a number of modular structures, each of which is composed of two layers of cells connected in a cascade. The first layer of each module consists of "S-cells", which show characteristics similar to simple cells or lower order hypercomplex cells, and the second layer consists of "C-cells" similar to complex cells or higher order hypercomplex cells. The afferent synapses to each S-cell have plasticity and are modifiable. The network has an ability of unsupervised learning: We do not need any "teacher" during the process of self-organization, and it is only needed to present a set of stimulus patterns repeatedly to the input layer of the network. The network has been simulated on a digital computer. After repetitive presentation of a set of stimulus patterns, each stimulus pattern has become to elicit an output only from one of the C-cells of the last layer, and conversely, this C-cell has become selectively responsive only to that stimulus pattern. That is, none of the C-cells of the last layer responds to more than one stimulus pattern. The response of the C-cells of the last layer is not affected by the pattern's position at all. Neither is it affected by a small change in shape nor in size of the stimulus pattern.},
+author = {Fukushima, K},
+doi = {10.1007/BF00344251},
+file = {:data/dev/object\_classifiers/ref/Fukushima1980.pdf:pdf},
+isbn = {0340-1200 (Print)$\backslash$r0340-1200 (Linking)},
+issn = {0340-1200},
+journal = {Biological cybernetics},
+mendeley-groups = {survey\_icip2015/introduction},
+pages = {193--202},
+pmid = {7370364},
+title = {{Neocognitron: a self organizing neural network model for a mechanism of pattern recognition unaffected by shift in position.}},
+volume = {36},
+year = {1980}
+}
+
+
 
 
 
