--- a/paper/survey.bib
+++ b/paper/survey.bib
@@ -2334,12 +2334,53 @@ year = {1963}
 }
 
 
+@inproceedings{lecun2010convolutional,
+  title={Convolutional networks and applications in vision},
+  author={LeCun, Yann and Kavukcuoglu, Koray and Farabet, Cl{\'e}ment},
+  booktitle={Circuits and Systems (ISCAS), Proceedings of 2010 IEEE International Symposium on},
+  pages={253--256},
+  year={2010},
+  organization={IEEE}
+}
 
 
 
 
+@article{Ciresan:2012g,
+  author    = {Dan Claudiu Ciresan and
+               Ueli Meier and
+               Luca Maria Gambardella and
+               J{\"u}rgen Schmidhuber},
+  title     = {Deep Big Multilayer Perceptrons For Digit Recognition},
+  journal   = {Neural Networks Tricks of the Trade},
+  volume    = {1},
+  year      = {2012},
+  pages     = {581-598},
+  ee        = {}
+}
+
+@article{lee2014deeply,
+  title={Deeply-supervised nets},
+  author={Lee, Chen-Yu and Xie, Saining and Gallagher, Patrick and Zhang, Zhengyou and Tu, Zhuowen},
+  journal={arXiv preprint arXiv:1409.5185},
+  year={2014}
+}
 
 
+@article{deepfwd,
+  author    = {Bogdan Miclut and
+               Thomas K{\"{a}}ster and
+               Thomas Martinetz and
+               Erhardt Barth},
+  title     = {Committees of deep feedforward networks trained with few data},
+  journal   = {CoRR},
+  volume    = {abs/1406.5947},
+  year      = {2014},
+  url       = {http://arxiv.org/abs/1406.5947},
+  timestamp = {Tue, 01 Jul 2014 11:58:08 +0200},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/journals/corr/MiclutKMB14},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
 
 
 
