--- a/paper/survey.bib
+++ b/paper/survey.bib
@@ -62,17 +62,23 @@ title = {{Imagenet large scale visual recognition challenge 2010}},
 url = {http://scholar.google.com/scholar?hl=en\&btnG=Search\&q=intitle:Large+Scale+Visual+Recognition+Challenge+2010\#2},
 year = {2010}
 }
+
+
 @article{Arge2015,
-archivePrefix = {arXiv},
-arxivId = {arXiv:1409.1556v5},
-author = {Karen Simonyan and Andrew Zisserman},
-eprint = {arXiv:1409.1556v5},
-file = {:data/dev/object\_classifiers/ref/6.pdf:pdf},
-mendeley-groups = {survey\_icip2015},
-pages = {1--13},
-title = {{V d c n l -s i r}},
-year = {2015}
+  author    = {Karen Simonyan and
+               Andrew Zisserman},
+  title     = {Very Deep Convolutional Networks for Large-Scale Image Recognition},
+  journal   = {CoRR},
+  volume    = {abs/1409.1556},
+  year      = {2014},
+  url       = {http://arxiv.org/abs/1409.1556},
+  timestamp = {Wed, 01 Oct 2014 15:00:05 +0200},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/journals/corr/SimonyanZ14a},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
 }
+
+
+
 @article{Nair2010,
 abstract = {Restricted Boltzmann machines were developed using binary stochastic hidden units. These can be generalized by replacing each binary unit by an inﬁnite number of copies that all have the same weights but have progressively more negative biases. The learning and inference rules for these “Stepped Sigmoid Units” are unchanged. They can be approximated eﬃciently by noisy, rectiﬁed linear units. Compared with binary units, these units learn features that are better for object recognition on the NORB dataset and face veriﬁcation on the Labeled Faces in the Wild dataset. Unlike binary units, rectiﬁed linear units preserve information about relative intensities as information travels through multiple layers of feature detectors.},
 author = {Nair, Vinod and Hinton, Geoffrey E},
@@ -123,16 +129,20 @@ title = {{Gradient-based learning applied to document recognition}},
 volume = {86},
 year = {1998}
 }
+
 @article{Szegedy,
-archivePrefix = {arXiv},
-arxivId = {arXiv:1409.4842v1},
-author = {Szegedy, Christian and Reed, Scott and Sermanet, Pierre and Vanhoucke, Vincent and Rabinovich, Andrew},
-eprint = {arXiv:1409.4842v1},
-file = {:home/mahesh/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Szegedy et al. - Unknown - Going deeper with convolutions.pdf:pdf},
-mendeley-groups = {survey\_icip2015,survey\_icip2015/2014},
-pages = {1--12},
-title = {{Going deeper with convolutions}}
+  author    = {Christian Szegedy et al.},
+  title     = {Going Deeper with Convolutions},
+  journal   = {CoRR},
+  volume    = {abs/1409.4842},
+  year      = {2014},
+  url       = {http://arxiv.org/abs/1409.4842},
+  timestamp = {Wed, 01 Oct 2014 15:00:05 +0200},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/journals/corr/SzegedyLJSRAEVR14},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
 }
+
+
 
 @article{Zeiler2013,
 abstract = {Large Convolutional Network models have recently demonstrated impressive classification performance on the ImageNet benchmark. However there is no clear understanding of why they perform so well, or how they might be improved. In this paper we address both issues. We introduce a novel visualization technique that gives insight into the function of intermediate feature layers and the operation of the classifier. We also perform an ablation study to discover the performance contribution from different model layers. This enables us to find model architectures that outperform Krizhevsky $\backslash$etal on the ImageNet classification benchmark. We show our ImageNet model generalizes well to other datasets: when the softmax classifier is retrained, it convincingly beats the current state-of-the-art results on Caltech-101 and Caltech-256 datasets.},
@@ -2316,23 +2326,17 @@ volume = {15},
 year = {1982}
 }
 
-@article{BRYSON1963,
-annote = {doi: 10.2514/3.2107},
-author = {BRYSON, A E and DENHAM, W F and DREYFUS, S E},
-doi = {10.2514/3.2107},
-issn = {0001-1452},
-journal = {AIAA Journal},
-mendeley-groups = {survey\_icip2015/introduction},
-month = nov,
-number = {11},
-pages = {2544--2550},
-publisher = {American Institute of Aeronautics and Astronautics},
-title = {{OPTIMAL PROGRAMMING PROBLEMS WITH INEQUALITY CONSTRAINTS}},
-url = {http://dx.doi.org/10.2514/3.2107},
-volume = {1},
-year = {1963}
-}
 
+
+@article{BRYSON1963,
+  title={Optimal programming problems with inequality constraints},
+  author={Bryson, Arthur E and Denham, Walter F and Dreyfus, Stewart E},
+  journal={AIAA journal},
+  volume={1},
+  number={11},
+  pages={2544--2550},
+  year={1963}
+}
 
 @inproceedings{lecun2010convolutional,
   title={Convolutional networks and applications in vision},
@@ -2382,8 +2386,56 @@ year = {1963}
   bibsource = {dblp computer science bibliography, http://dblp.org}
 }
 
+@misc{Haralick1973,
+abstract = {Texture is one of the important characteristics used in identifying onject or regions of interest in an image, whether the image be a photomicrograph, an aerial photograph, or a satellite image. This paper describes some easily computable textural features based on gray-tone spatial dependancies, and illustrates their application in category identification tasks of three different kinds of image data: photomicrographs of five kinds of sandstones, 1:20 000 pancromatic aerial photographs of eight land-use categories, and Earth Resources Technology Satellite (ERTS) multispectral imagery containing seven land-use categories. We use two kinds of decisions rules: one for which the decision regions are convex polyhedra (a piecewise linear decision rule), and one for which the decision regions are rectangular parallelpipeds (a min-max decision rule). In each experiment the data set was divided into two parts, a training set and a test set. Test set identification accuracy is 89 percent for photomicrographs, 82 percent for aerial photographic imagery, and 83 percent for satellite imagery. These results indicate that the easily computable textural features probably have a general applicability for a wide variety of image-classification application.},
+author = {Haralick, Robert M. and Shanmugam, K. and Dinstein},
+booktitle = {IEEE Transactions on Systems, Man, and Cybernetics SMC-3},
+doi = {10.1109/TSMC.1973.4309314},
+file = {:data/dev/object\_classifiers/ref/haralick73.pdf:pdf},
+isbn = {0018-9472},
+issn = {0018-9472},
+mendeley-groups = {survey\_icip2015/introduction},
+pages = {610--621},
+pmid = {283},
+title = {{Textural features for image classification}},
+volume = {6},
+year = {1973}
+}
+@ARTICLE{4309999, 
+author={Tamura, Hideyuki and Mori, Shunji and Yamawaki, Takashi}, 
+journal={Systems, Man and Cybernetics, IEEE Transactions on}, 
+title={Textural Features Corresponding to Visual Perception}, 
+year={1978}, 
+month={June}, 
+volume={8}, 
+number={6}, 
+pages={460-473}, 
+keywords={Anthropometry;Detectors;Humans;Image analysis;Image edge detection;Image segmentation;Laboratories;Magnetooptic recording;Psychology;Visual perception}, 
+doi={10.1109/TSMC.1978.4309999}, 
+ISSN={0018-9472},}
 
 
+@article{kohonen1982self,
+  title={Self-organized formation of topologically correct feature maps},
+  author={Kohonen, Teuvo},
+  journal={Biological cybernetics},
+  volume={43},
+  number={1},
+  pages={59--69},
+  year={1982},
+  publisher={Springer}
+}
+@article{imagenet,
+  author    = {Olga Russakovsky 
+               et al.},
+  title     = {ImageNet Large Scale Visual Recognition Challenge},
+  journal   = {CoRR},
+  volume    = {abs/1409.0575},
+  year      = {2014},
+  url       = {http://arxiv.org/abs/1409.0575},
+  timestamp = {Wed, 01 Oct 2014 15:00:04 +0200},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/journals/corr/RussakovskyDSKSMHKKBBF14},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
 
 
 
